# AVT

./: .gitignore  CMakeLists.txt  README.md
materials/: default.mtl  diablo.mtl  headcrab.mtl
shaders/: debug.frag  debug.vert  depth.frag  realistic.frag  realistic.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  specular.frag
src/: App.cpp  App.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Common.h  Context.cpp  Context.h  Geometry.cpp  Geometry.h  GlobalState.cpp  GlobalState.h  IcoSphere.cpp  IcoSphere.h  Light.cpp  Light.h  Logger.h  Logger.inl  Manager.h  Manager.inl  Material.cpp  Material.h  Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  OpenGL.cpp  OpenGL.h  Quaternion.cpp  Quaternion.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Spatial.cpp  (+10 more)
vs/: avt.sln
vs/assignment/: assignment.vcxproj  assignment.vcxproj.filters
vs/assignment/shaders/: picking.frag  picking.vert  realistic.frag
